--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false">
+    </script>
     <script src='js/script.js'></script>
     <style>
         body {background-image: url("images/mountains.jpg"); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;}
@@ -24,7 +26,7 @@
         width: 70px;
         text-align: right; margin-right: 20px
     }
-        footer {background-color:#333;height:30px; width: 100%;position: absolute; bottom:0; }
+        footer {background-color:#333;height:30px; width: 100%; bottom:0; }
     </style>
 </head>
 <body>
@@ -79,11 +81,16 @@
         <div id="employee_list"></div>
         <button id="add">Add Employee</button>
         <div id = "edit_box">
-        </div></div></div>
-
-
-</div>
+        </div>
+        <div id ="display_map" style="width: 500px; height: 500px">
+        </div>
     </div>
+
+    </div>
+
+
+
+    </div></div></div>
 <footer>
 
 </footer>
